# EchoLabeler

./: .gitignore  LICENSE  README.md  latex_table_out.txt  pyproject.toml
artifacts/: MetaCAT_test_results.pkl  MetaCAT_test_results_reduced.pkl  MetaCAT_test_results_with_negatives_reduced.pkl  latex_table.txt  latex_table_new.txt
assets/: abbreviations.yml  config_textcat.cfg  nn_settings.yml  spancat_config_nw_10.cfg  test_echoid.csv  token_list_new.yml  train_echoid.csv
assets/regex/: aoi_v6.txt  aortic_regurgitation.txt  aortic_stenosis.txt  aos_v5.txt  diastolic_dysfunction.txt  lv_dil.txt  lv_dil_v2.txt  lv_syst_func.txt  mi_v8.txt  mitral_regurgitation.txt  pe.txt  rv_dil.txt  rv_dil_v2.txt  rv_syst_func.txt  ti_v2.txt  tricuspid_regurgitation.txt  wma.txt
notebooks/: Echo_project_biLSTM_MedCAT_Span.ipynb  Echo_project_clinlp.ipynb  Echo_project_documentClassification_CBOW.ipynb  Echo_project_documentClassification_MedRoBERTa.ipynb  Echo_project_documentClassification_SetFit.ipynb  Echo_project_documentClassification_biLSTM.ipynb  label_counts.ipynb  spancat_summary_statistics.ipynb  summary_statistics_regex.ipynb  summary_statistics_spancat.ipynb  summary_statistics_textcat.ipynb  table2_label_counts.ipynb
src/: config.py  deabber.py  echo_models.py  echo_utils.py  latex_table.py  medcat_utils.py
